# cta-forge

./: .dockerignore  .env.example  .gitignore  Dockerfile  HYPERLIQUID_SDK_ISSUES.md  NOTES.md  README.md  docker-compose.mainnet-pilot-live.yml  docker-compose.mainnet-pilot.yml  docker-compose.prod.yml  docker-compose.yml  engine-state.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  diagnostic.yml  lint.yml  logs.yml  semgrep.yml  test.yml  update-env.yml
docs/: BACKTEST_INFRA_REQUIREMENTS.md  DBMS_BACKUP_RESTORE_RUNBOOK_2026-05-15.md  DBMS_CONTAINER_DEPLOYMENT_2026-05-15.md  DBMS_CUTOVER_CHECKLIST_2026-05-15.md  DBMS_DUAL_WRITE_DESIGN_2026-05-15.md  DBMS_MULTI_LIVE_DESIGN_2026-05-14.md  ENV_CLEANUP_TRACKING.md  EXCHANGE_DATA_RESEARCH.md  HL_MAINNET_TESTNET_RESEARCH_2026-05-02.md  HYPERLIQUID_SDK_ISSUES.md  INCIDENT_2026-05-29_MULTI_LIVE_CONFIG.md  LIVE_PERSISTENCE_IMPORT_PLAN_2026-05-15.md  LIVE_PERSISTENCE_IMPORT_REVIEW_2026-05-16.md  MAINNET_PILOT_RUNBOOK_2026-05-04.md  MULTI_LIVE_MINIMAL_ROLLOUT_2026-05-21.md  NOTES.md  STRATEGY_ITERATION_2026-04-28.md  TIME_PHASE_RESEARCH_2026-05-06.md
infra/: ec2-launch.sh  env.mainnet-400-01.example
infra/db/: README.md
infra/db/migrations/: 001_live_persistence.sql  002_live_target_execution_buckets.sql  003_drop_live_trades_fee.sql
infra/terraform/: main.tf
libs/backtest/: pyproject.toml
libs/backtest/src/backtest/: __init__.py  chart.py  engine.py  experiment.py  metrics.py  result.py
libs/core/: pyproject.toml
libs/cta-core/: pyproject.toml
libs/exchange/: pyproject.toml
libs/exchange/src/exchange/: __init__.py  adapter.py  hyperliquid.py
live-report/: equity.jsonl  signals.jsonl  trades.jsonl
scripts/: fix_historical_trade_qty.py  fix_historical_trade_qty_output.sql
scripts/backtest/: chart_overlay.py  chart_walkforward.py  joint_badscore_research.py  v10_sweep.py  v10g_longterm.py  v10g_maxrange.py  v16a_1x.py  v16a_1x_1k_dd_protected.py  v16a_1x_by_year.py  v16a_1x_cap_compare.py  v16a_1x_vs_5x.py  v16a_5x_dd_3way.py  v16a_5x_dd_compare.py  v16a_5x_live_dd.py  v16a_factor_audit.py  v16a_factor_deep.py  v16a_live_config_chart.py  v16a_live_constraints_ablation.py  v16a_optimized_vs_baseline.py  v16a_phase_robustness_research.py  v16a_phase_shadow_audit.py  v16a_symbol_decomp.py  v16a_symbol_only.py  v16a_time_phase_research.py  v16a_zec_compare.py  v16a_zec_comparison.py  v16a_zec_plot.py
scripts/backtest/archive/: README.md  analyze_2024.py  chart_walkforward.py  v10_sweep.py  v10g_longterm.py  v11_expanded.py  v11b_selective.py  v11c_curated.py  v12_funding.py  v12b_funding.py  v13_corr_filter.py  v14_dynpos.py  v15a_no_maxhold.py  v15b_wider_stop.py  v15c_combined.py  v15d_higher_vol.py  walk_forward_vol.py  walk_forward_vol2.py
services/alpha-server/: pyproject.toml
services/alpha-server/src/alpha/: app.py  registry.py
services/alpha-server/src/alpha_server/: __init__.py  app.py  registry.py  routes.py
services/alpha-server/src/alpha_server/factors/: __init__.py  breakout.py  carry.py  momentum.py  volatility.py
services/alpha-service/: pyproject.toml
services/data-server/: pyproject.toml
services/data-server/src/data_server/: __init__.py  app.py  fetcher.py  routes.py  store.py
services/data-service/: pyproject.toml
services/engine/: pyproject.toml
services/engine-service/: pyproject.toml
services/engine-service/src/engine_service/: app.py  live.py  loop.py
services/engine/src/engine/: __init__.py  app.py  backtest.py  indicators.py  live.py  loop.py  routes.py  run_live.py  state.py
services/exchange/: pyproject.toml
services/exchange/src/exchange_server/: __init__.py  adapter.py  app.py  hyperliquid.py  routes.py
services/executor/: pyproject.toml
services/executor/src/executor/: __init__.py  app.py  backtest.py  decision.py  indicators.py  journal.py  live.py  live_data.py  live_persistence_dual.py  live_persistence_import.py  live_persistence_import_plan.py  live_persistence_inventory.py  live_persistence_parity.py  live_persistence_postgres.py  live_persistence_runtime.py  live_persistence_store_factory.py  live_public_instances.py  live_runtime_lock.py  live_target.py  loop.py  notify.py  portfolio_backtest.py  routes.py  run_apply_live_persistence_migrations.py  run_bootstrap_live_instance.py  run_check_live_instance_db.py  run_check_live_instance_env.py  run_check_live_persistence_config.py  run_check_live_persistence_parity.py  run_import_live_persistence.py  run_import_live_persistence_plan.py  run_inventory_live_persistence.py  run_live.py  run_live_instances_status.py  run_mainnet_preflight.py  run_phase_shadow_snapshot.py  run_plan_live_persistence_import.py  run_shadow_tick.py  signal_pipeline.py  state.py  (+1 more)
services/executor/src/executor/profiles/: v16a_badscore_overlay.py
services/report-service/: pyproject.toml
services/reporter/: pyproject.toml
services/reporter-service/: pyproject.toml
services/reporter-service/src/reporter_service/: app.py
services/reporter/src/reporter/: __init__.py  app.py  metrics.py  plot.py  routes.py
services/strategy-server/: pyproject.toml
services/strategy-server/src/strategy/: allocator.py  app.py  composer.py  routes.py
services/strategy-server/src/strategy_server/: __init__.py  allocator.py  app.py  composer.py  risk.py  routes.py  selector.py
services/strategy-service/: pyproject.toml
services/strategy-service/src/strategy_service/: __init__.py  allocator.py  app.py  risk.py  routes.py  selector.py
tests/integration/: test_pipeline.py  test_services.py
tests/unit/engine/: test_live.py  test_state.py
tests/unit/exchange/: test_adapter.py  test_routes.py
tests/unit/test_alpha_server/: test_factors.py  test_registry.py
tests/unit/test_alpha_service/: test_factors.py  test_registry.py
tests/unit/test_data_server/: test_routes.py  test_store.py
tests/unit/test_data_service/: test_fetcher.py  test_routes.py  test_store.py
tests/unit/test_engine/: test_backtest.py
tests/unit/test_engine_service/: test_backtest.py  (+2 more)
(+65 files in other folders)
