[project]
name = "cta-forge"
version = "0.1.0"
description = "Crypto CTA strategy forge — monorepo microservices"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.22",
    "httpx>=0.28.0",
    "data-service",
    "alpha-service",
    "strategy-service",
    "engine-service",
    "reporter-service",
    "exchange",
]

[tool.uv.sources]
data-service = { workspace = true }
alpha-service = { workspace = true }
strategy-service = { workspace = true }
engine-service = { workspace = true }
reporter-service = { workspace = true }
exchange = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/core",
    "libs/exchange",
    "services/data-service",
    "services/alpha-service",
    "services/strategy-service",
    "services/engine-service",
    "services/reporter-service",
]

[tool.ruff]
extend-exclude = ["scripts/"]

[tool.ty.src]
exclude = ["scripts/"]

[tool.ty.rules]
# Third-party stub issues (matplotlib datetime args, polars return types, HL SDK monkey-patch)
invalid-argument-type = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"

[tool.ty.terminal]
error-on-warning = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
