[project]
name = "backtest"
version = "0.1.0"
description = "Backtest simulation engines, metrics, and charting for cta-forge"
requires-python = ">=3.12"
dependencies = [
    "core",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
