[project]
name = "exchange"
version = "0.1.0"
description = "Exchange connectivity library (Hyperliquid adapter)"
requires-python = ">=3.12"
dependencies = [
    "cta-core",
    "hyperliquid-python-sdk>=0.9.0",
]

[tool.uv.sources]
cta-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
