[project]
name = "data-server"
version = "0.1.0"
description = "Binance historical data provider"
requires-python = ">=3.12"
dependencies = [
    "cta-core",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "polars>=1.0.0",
    "dttb>=0.3.2",
]

[tool.uv.sources]
cta-core = { workspace = true }
