[project]
name = "exchange-server"
version = "0.1.0"
description = "Exchange connectivity service — Hyperliquid adapter"
requires-python = ">=3.12"
dependencies = [
    "cta-core",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "dttb>=0.3.2",
    "hyperliquid-python-sdk>=0.9.0",
]

[tool.uv.sources]
cta-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exchange_server"]
