[project]
name = "strategy-server"
version = "0.1.0"
description = "Signal composition, asset selection, allocation, risk"
requires-python = ">=3.12"
dependencies = [
    "cta-core",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "polars>=1.0.0",
    "numpy>=2.0.0",
]

[tool.uv.sources]
cta-core = { workspace = true }
